--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=Andreraditya.guru
 APP_ENV=local
 APP_KEY=base64:qcgDPvGAo6ZNq/BcYnBIlooxTXwRG67drifVdggy9wk=
 APP_DEBUG=true
