change title browser v1

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,12 @@
-APP_NAME=Andreraditya.guru
+APP_NAME=Andreraditya
+APP_DASHBOARD=Dashboard
 APP_ENV=local
 APP_KEY=base64:qcgDPvGAo6ZNq/BcYnBIlooxTXwRG67drifVdggy9wk=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
 
-APP_LOCALE=en
+APP_LOCALE=id
 APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
 
